assets/css/style.css
/* ... */
@media (max-width: 767px) {
  .navbar-btn {
    position: absolute;
    top: 50%;
    right: 0;
    margin-top: 10px;
    /* -webkit-transform: translateY(-50%);
    -moz-transform: translateY(-50%);
    -ms-transform: translateY(-50%);
    -o-transform: translateY(-50%);
    transform: translateY(-50%); */
  }
}

.navbar-btn .main-btn {
  height: 45px;
  line-height: 45px;
  background: -webkit-linear-gradient(left,
      #fe8464 0%,
      #fe6e9a 50%,
      #fe8464 100%);
  /* background: -o-linear-gradient(left, #fe8464 0%, #fe6e9a 50%, #fe8464 100%); */
  background: linear-gradient(to right, #fe8464 0%, #fe6e9a 50%, #fe8464 100%);
  background-size: 200%;
  box-shadow: 0;
  padding-left: 5px;
  padding-right: 5px;
  box-shadow: none;
}


.navbar-btn:hover{
  color: #fff;
  background-position: right center;
  background: rgb(47, 203, 57);
  transform: none;
  transition: none;
  box-shadow: none;
}

.sticky .navbar-toggler .toggler-icon {
  background-color: #2e2e2e;
}

.sticky .navbar-nav .nav-item a {
  color: #2e2e2e;
}

.sticky .navbar-nav .nav-item:hover>a {
  color: #361cc1;
}
.navbar-btn{
  background: linear-gradient(135deg,#00bfff,#150e4e);
}
.navbar-btn:hover{
  background: linear-gradient(115deg,#150e4e,#00bfff);
  transform: scale(0.95);
}
.navbar-btn a:hover{
  color: #fff;
  background-position: right center;
  background: rgb(47, 203, 57);
  box-shadow: none;
  transition: none;
  transform: none;
}

.menu-btn a:hover{
  color: #fff;
  background-position: right center;
  background: rgb(47, 203, 57);
}

.header-hero {
  position: relative;
  z-index: 5;
  background-position: bottom center;
}

#particles-1 {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: -1;
}

.header-hero-content {
  padding-top: 180px;
}

@media (max-width: 767px) {
  .header-hero-content {
    padding-top: 100px;
  }
}

.header-hero-content .header-sub-title {
  font-size: 38px;
  font-weight: 300;
  color: #fff;
}

@media (max-width: 767px) {
  .header-hero-content .header-sub-title {
    font-size: 24px;
  }
}

@media only screen and (min-width: 576px) and (max-width: 767px) {
  .header-hero-content .header-sub-title {
    font-size: 30px;
  }
}

.header-hero-content .header-title {
  font-size: 38px;
  font-weight: 700;
  color: #fff;
}

@media (max-width: 767px) {
  .header-hero-content .header-title {
    font-size: 24px;
  }
}

@media only screen and (min-width: 576px) and (max-width: 767px) {
  .header-hero-content .header-title {
    font-size: 30px;
  }
}

.header-hero-content .text {
  color: #fff;
  margin-top: 30px;
}

.header-hero-content .main-btn {
  margin-top: 40px;
}

.header-hero-image {
  padding-top: 45px;
}

.header-hero-image img {
  max-width: 650px;
}

@media (max-width: 767px) {
  .header-hero-image img {
    max-width: 100%;
  }
}

@media (max-width: 767px) {
  .header-hero-image {
    padding-top: 30px;
  }
}

@media (max-width: 767px) {
  .brand-logo {
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
  }
}

.single-logo {
  padding: 0 30px;
}

@media only screen and (min-width: 768px) and (max-width: 991px) {
  .single-logo {
    padding: 0 15px;
  }
}

@media (max-width: 767px) {
  .single-logo {
    padding: 0 15px;
  }
}

@media (max-width: 767px) {
  .single-logo {
    width: 50%;
  }
}

@media only screen and (min-width: 576px) and (max-width: 767px) {
  .single-logo {
    width: 33.33%;
  }
}

.single-logo img {
  width: 100%;
  opacity: 0.5;
  -webkit-transition: all 0.3s ease-out 0s;
  -moz-transition: all 0.3s ease-out 0s;
  -ms-transition: all 0.3s ease-out 0s;
  -o-transition: all 0.3s ease-out 0s;
  transition: all 0.3s ease-out 0s;
}

.single-logo:hover img {
  opacity: 1;
}

.single-services {
  position: relative;
  display: flex;
  justify-content: center;
  align-items: flex-start;
  width: 350px;
  height: 300px;
  background-color: #fff;
  -webkit-box-shadow: 0px 5px 30px 0px rgba(167, 167, 167, 0.16);
  -moz-box-shadow: 0px 5px 30px 0px rgba(167, 167, 167, 0.16);
  box-shadow: 0px 5px 30px 0px rgba(167, 167, 167, 0.16);
  -webkit-transition: all 0.3s ease-out 0s;
  -moz-transition: all 0.3s ease-out 0s;
  -ms-transition: all 0.3s ease-out 0s;
  -o-transition: all 0.3s ease-out 0s;
  transition: all 0.3s ease-out 0s;
  padding: 50px 30px;
  border: 2px solid transparent;
  border-radius: 20px;
}

.single-services:hover {
  height: 490px;
}

@media (max-width: 767px) {
  .single-services {
    padding: 20px 20px 30px;
  }
}

.single-services .services-icon {
  display: inline-block;
  position: absolute;
  top: 60px;
  width: 300px;
  border-radius: 20px;
  transition: 0.5s;
  overflow: hidden;
}

.single-services:hover .services-icon {
  top: -30px;
  scale: 0.75;
  box-shadow: 0 15px 45px rgba(0, 0, 0, 0.15);
  z-index: 10;
  background-color: white;
}

.single-services .services-icon img {
  -webkit-transition: all 0.4s ease-out 0s;
  -moz-transition: all 0.4s ease-out 0s;
  -ms-transition: all 0.4s ease-out 0s;
  -o-transition: all 0.4s ease-out 0s;
  transition: all 0.4s ease-out 0s;
}

.single-services .services-icon .shape-1 {
  position: absolute;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%, -50%);
  -moz-transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
  -o-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
}

.single-services .services-icon i {
  position: absolute;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%, -50%);
  -moz-transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
  -o-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
  font-size: 34px;
  color: #fff;
}

.single-services .services-content {
  position: absolute;
  top: 190px;
  width: 100%;
  padding: 0 30px;
  text-align: center;
  height: 32px;
  overflow: hidden;
  transition: 0.5s;
}

.single-services:hover .services-content {
  top: 130px;
  height: 250px;
}
/* ... */

